Fix: Permitindo que a esteira rode na branch de feature

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 # O QUE: Nome da nossa esteira de processos
 name: Esteira de Validacao do Sistema
 
-# QUANDO: Executar toda vez que houver um 'push' na branch main
+# QUANDO: Executar toda vez que houver um 'push' na branch main ou feature-*
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "feature-*" ]
   pull_request:
     branches: [ "main" ]
 
